--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -69,8 +69,8 @@ video {
   margin-top: 2%;
   margin-left: auto;
   margin-right: auto;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
+  /* animation-duration: 2s;
+  animation-iteration-count: infinite; */
 }
 
 #name:hover {
@@ -139,7 +139,7 @@ video {
 #amb {
   background: rgba(0, 0, 0, 0.7);
   padding: 3%;
-  margin-top: 15%;
+  margin-top: 3%;
   color: orange;
   border-radius: 25px;
   border: 2px solid aqua;
@@ -158,6 +158,9 @@ video {
   border-radius: 25px;
   border: 2px solid aqua;
   display: none;
+  max-width: 1120px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #projects {
